<resources>
    <string name="app_name">Submission 5</string>

    <string name="search_here">Search Movie Here</string>
    <string name="text_button_search">Search</string>
    <string name="title">Title</string>
    <string name="overview" translatable="false">Overview</string>
    <string name="default_rate" translatable="false">0.0</string>
    <string name="popularity">Popularity :</string>
    <string name="default_popular" translatable="false">0</string>
    <string name="rate_count">Rate Count :</string>
    <string name="release_date">Release Date :</string>
    <string name="default_release_date" translatable="false">06December1997</string>
    <string name="synopsis">Synopsis</string>
    <string name="toolbar_search">Search Movie</string>
    <string name="toolbar_detail">Detail Movie</string>
    <string name="image_poster" translatable="false">image_poster</string>
    <string name="image_backdrop" translatable="false">image_backdrop</string>
    <string name="tab_1" translatable="false">Tab 1</string>
    <string name="tab_2" translatable="false">Tab 2</string>
    <string name="search_menu">Search Menu</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="toolbar_main">Movies</string>
    <string name="toolbar_settings">Settings</string>
    <string name="language">Change Language</string>
    <string name="current_language">English (US)</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="favorite">Favorite</string>
    <string name="checklist_language" translatable="false">Checklist Language</string>
    <string name="empty_search">search something</string>
    <string name="favorite_menu" translatable="false">favorite_menu</string>
    <string name="upz" translatable="false">Upz,..</string>
    <string name="seem_s_you_have_no_favorite_movie_yet">Seem\'s you have no Favorite Movie yet,</string>
    <string name="try_to_add_some">Let\'s try to add some Favorite first!</string>
    <string name="appwidget_text" translatable="false">Favorite Movie</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="no_favorite_found" translatable="false">No Favorite Movie found</string>
    <string name="widget" translatable="false">Widget</string>
    <string name="notification">Notification</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="update_reminder">Update New Now Playing Movie</string>
    <string name="toastDaily">You will get reminder at 7 AM</string>
    <string name="toastUpdate">You will get update at 8 AM</string>
    <string name="daily_content">Don\'t miss it. There is amazing Movie playing everyday !</string>
    <string name="update_content">This Movie playing right now !</string>
</resources>
