<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LanguageActivity">

    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/language"
        android:gravity="center"
        android:textSize="@dimen/text24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/oneDp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/linear_change_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/current_language"
            android:textSize="@dimen/text18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/dimen200dp"
            android:layout_height="@dimen/dimen200dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_weight="4"
            android:contentDescription="@string/checklist_language"
            android:src="@drawable/ic_done" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/oneDp"
        android:background="@android:color/darker_gray" />

</LinearLayout>