<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_favorite"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:visibility="gone"
        tools:listitem="@layout/recycler_template" />

    <RelativeLayout
        android:id="@+id/relative_empty_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/upz"
            android:textSize="@dimen/text24sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/seem_s_you_have_no_favorite_movie_yet"
            android:textSize="@dimen/text18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/try_to_add_some"
            android:textSize="@dimen/text18sp"
            android:textStyle="italic" />

    </RelativeLayout>

</LinearLayout>