<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:focusable="true">

        <ImageView
            android:id="@+id/image_template"
            android:layout_width="@dimen/imageTemplateWidth"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_poster"
            android:scaleType="fitStart"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin4dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_overview_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin4dp"
                android:ellipsize="end"
                android:lines="3"
                android:text="@string/overview"
                android:textSize="@dimen/text18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/oneDp"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:background="@android:color/darker_gray" />

</LinearLayout>